# skybrush-ext-libmotioncapture

./: README.md  pyproject.toml  skybrushd.jsonc  tbump.toml
src/skybrush_ext_libmotioncapture/: __init__.py  channel.py  driver.py  extension.py  utils.py
