[tool.poetry]

name = "skybrush-ext-libmotioncapture"
version = "1.0.0"
description = "libmotioncapture mocap support for Skybrush Server"
authors = ["Tamas Nepusz <ntamas@gmail.com>"]
license = "UNLICENSED"
packages = [
  # Change this to the name of the folder in src/ containing your extension
  { include = "skybrush_ext_libmotioncapture", from = "src" }
]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.9"
quart = ">=0.18.0"
motioncapture = "^1.0a2"
numpy = "^1.23.1"

[tool.poetry.group.dev.dependencies]
flockwave-server = { git = "https://github.com/skybrush-io/skybrush-server", branch = "main" }

[tool.poetry.plugins]

[tool.poetry.plugins."skybrush.server.ext"]
# Change the key below to the name of the extension that you want to use in
# configuration files, and the value to the name of the Python module that
# contains the extension code
libmotioncapture = "skybrush_ext_libmotioncapture"

[tool.poetry.scripts]
skybrushd = "flockwave.server.launcher:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

